--- a/src/style.scss
+++ b/src/style.scss
@@ -116,7 +116,7 @@
 
     .sidebar {
       flex: 1;
-      background-color: #023e8a;
+      background-color: #021227;
       padding: 5px;
       position: fixed;
       top: 0;
@@ -136,7 +136,6 @@
         color: #ddddf7;
         border-radius: 15px;
         margin-top: 5px;
-        
 
         .logo {
           font-weight: bold;
@@ -168,7 +167,6 @@
             border-radius: 8px;
           }
         }
-        
       }
       .search {
         border-radius: 50px;
@@ -241,8 +239,8 @@
     .chat {
       flex: 1;
       background: rgb(53, 53, 144);
-      background-color: #333333;
-     position: fixed;
+      background-image: url(./img/backwall.jpeg);
+      position: fixed;
       top: 0;
       left: 0;
       width: 100%;
@@ -400,14 +398,12 @@
           img {
             height: 30px;
             cursor: pointer;
-
           }
           button {
             border: none;
             margin-right: 5px;
             cursor: pointer;
-          background: none;
-
+            background: none;
           }
         }
       }
@@ -434,5 +430,3 @@
 //     overflow: hidden;
 //   }
 // }
-
-
